Fix 1px jump during transition

--- a/components/search_bar/index.styl
+++ b/components/search_bar/index.styl
@@ -18,6 +18,7 @@ suggestion-height = (suggestion-thumbnail-size + 20px)
     #main-layout-search-bar-feedback
       height logo-size
       border 1px solid gray-lighter-color
+      opacity 1
 
   &.is-loading
     #main-layout-search-bar-spinner
@@ -28,19 +29,18 @@ suggestion-height = (suggestion-thumbnail-size + 20px)
 #main-layout-search-bar-feedback
   display block
   position absolute
-  width calc('100% + 2px')
+  width calc('100% + 3px')
   height 0
   left 0
   right auto
   padding 0 (logo-size / 2)
   margin-left -1px
-  line-height logo-size
-  border 0 solid
-  background-color gray-lightest-color
-  overflow hidden
   visibility visible
-  opacity 1
-  transition height 0.125s
+  overflow hidden
+  line-height logo-size
+  border 1px solid gray-lighter-color
+  background-color gray-lightest-color
+  transition opacity 0.125s, height 0.125s
 
 #main-layout-search-bar-spinner
   display none
